prj_ws/log/build_2025-03-31_22-12-37/carla_vehicle/stderr.log
  File "/home/thuvaraga/carla/carla_project/prj_ws/install/carla_vehicle/lib/python3.10/site-packages/carla_vehicle/vehicle.py", line 200
    2.0 * math.tan(fov) * math.pi / 360.0))
                                          ^
SyntaxError: unmatched ')'

